tests/fixtures/invalid/round_none_bytes.py
# Cannot call round() with None, Bytes
x = round(None, b"hello")
